--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "bin": {
-    "nity": "bin/index.js"
+    "delivery": "dist/bin/index.js"
   },
   "dependencies": {
     "@hendt/ebay-api": "^5.2.1",
@@ -8,14 +8,18 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "inquirer": "^8.2.0",
-    "openurl": "^1.1.1"
+    "openurl": "^1.1.1",
+    "ts-loader": "^9.2.6"
   },
-  "name": "nity-delivery",
+  "name": "tego-delivery",
   "description": "Aplicación para la entrega de productos NityShop",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc --watch",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
   "repository": {
     "type": "git",
@@ -27,5 +31,11 @@
   "bugs": {
     "url": "https://github.com/KFuee/NityDelivery/issues"
   },
-  "homepage": "https://github.com/KFuee/NityDelivery#readme"
+  "homepage": "https://github.com/KFuee/NityDelivery#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/inquirer": "^8.1.3",
+    "@types/node": "^17.0.8",
+    "typescript": "^4.5.4"
+  }
 }
