--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/KFuee/NityDelivery#readme",
   "devDependencies": {
+    "@types/cli-spinner": "^0.2.1",
     "@types/express": "^4.17.13",
     "@types/inquirer": "^8.1.3",
     "@types/node": "^17.0.8",
